<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="407dp"
        android:layout_height="727dp"
        android:background="#EEEEEE"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="2dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:text="@string/Dia"
            android:textAlignment="viewStart"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginLeft="10dp"
            android:text="@string/Fecha"
            android:textSize="20sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="186dp">

            <LinearLayout
                android:layout_width="371dp"
                android:layout_height="197dp"
                android:background="#FFFFFF"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="0dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="234dp"
                    android:layout_height="45dp"
                    android:text="@string/Restaurante"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:text="@string/Lugar"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/Horario" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="172dp"
                    android:layout_height="50dp"
                    android:text="Iniciar"
                    android:textAlignment="center" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="67dp"
                    app:srcCompat="@android:drawable/bottom_bar" />


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>